Fix on multilevel-offcanvas: The scrollbar appears within right offcanvas submenus

--- a/scss/foundation/components/_offcanvas.scss
+++ b/scss/foundation/components/_offcanvas.scss
@@ -106,7 +106,8 @@ $menu-slide: "transform 500ms ease" !default;
   top: 0;
   bottom: 0;
   position: absolute;
-  overflow-y: auto;
+  overflow-x: hidden;
+  overflow-y: auto;  
   background: $off-canvas-bg;
   z-index: 1001;
   box-sizing: content-box;
@@ -394,7 +395,8 @@ $menu-slide: "transform 500ms ease" !default;
   bottom: 0;
   position: absolute;
   margin: 0;
-  overflow-y: auto;
+  overflow-x: hidden;
+  overflow-y: auto;  
   background: $off-canvas-bg;
   z-index: 1002;
   box-sizing: content-box;
